# scapix-jni

./: CMakeLists.txt  README.md
source/scapix/: java_api.h
source/scapix/jni/: env.h  java_api.h  native_method.h  object.h  object_impl.h  object_traits.h  type_traits.h
source/scapix/jni/com/scapix/: bridge.h
source/scapix/jni/detail/: init.h
source/scapix/jni/java_api/: init.h  macros_pop.h  macros_push.h
